# claude-project-template

./: .gitignore  CLAUDE.md  LICENSE  QUICKSTART.md  README.md  install.sh  pyproject.toml
.claude/: settings.json  ship.json  template.json
.claude/hooks/: config-suggest.sh  lint-format.sh  no-skip-ci.sh  task-guard.sh  venv-activate.sh  worktree-check.sh  worktree-setup.sh
.claude/plans/: INDEX.md  template-modernization-2026-05.md
.claude/skills/aws-manifest/: SKILL.md
.claude/skills/bash-review/: SKILL.md
.claude/skills/capture/: SKILL.md
.claude/skills/check/: SKILL.md
.claude/skills/ci-review/: SKILL.md
.claude/skills/claim-tasks/: SKILL.md  reference.md
.claude/skills/cleanup/: SKILL.md
.claude/skills/code-health/: SKILL.md
.claude/skills/comic/: SKILL.md
.claude/skills/cost-estimate/: SKILL.md
.claude/skills/docs/: SKILL.md
.claude/skills/fix-failed-pr/: SKILL.md
.claude/skills/init-from-template/: SKILL.md
.claude/skills/init-project/: SKILL.md
.claude/skills/lint/: SKILL.md
.claude/skills/model-alternatives/: SKILL.md  eval-suite.md  models-reference.md
.claude/skills/next-steps/: SKILL.md
.claude/skills/port-from-project/: SKILL.md
.claude/skills/project-review/: SKILL.md
.claude/skills/prompt-review/: SKILL.md
.claude/skills/release-tasks/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/ship/: SKILL.md  reference.md
.claude/skills/sprint/: SKILL.md
.claude/skills/sync-config/: SKILL.md
.claude/skills/technical-review/: SKILL.md
.claude/skills/test/: SKILL.md
.claude/skills/version/: SKILL.md
.claude/skills/worktree-cleanup/: SKILL.md
.claude/work-queue/: config.json
docs/: TASK-FORMAT.md
next-steps/: _meta.md  _sections.toml
next-steps/active/: make-bin-pr-merge-worktree-safe-avoid-local-main-checkout.md
scripts/: sync-all-projects.sh  sync-main.sh  task-board.py  task-format.py  test-workers.sh  work-queue.sh  worktree-cleanup.sh
src/your_package/: __init__.py
tests/: conftest.py  test_task_board.py
